2001-11-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: Removed TODO.
	TMDA 0.41 is released.

2001-11-04  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.40 is released.

2001-11-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* INSTALL: Move success reporting info to config-server.html.

2001-10-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.39 is released.

2001-10-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* CRYPTO: Added keyword address description.

2001-10-17  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.38 is released.

2001-10-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: The FAQ is now in HTML within htdocs.

2001-10-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* INSTALL: htdocs replaces doc.

	* THANKS (Contributions): Add Matt Armstrong.

2001-09-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: Update summary description to better reflect the current
	workings of the software.

2001-09-19  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.37 is released.

	* CRYPTO: Added information on variable length HMACs.

2001-09-13  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.36 is released.

2001-09-10  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.35 is released.

2001-08-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* FAQ: Added tmda-clean info.

2001-08-28  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.34 is released.

2001-08-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.33 is released.

2001-08-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* README: TMDA 0.32 is released.

	* INSTALL: Added usage reporting information.
