@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Sat Nov 17 11:00:00 2001 -->
+<!-- Tue Nov 27 16:42:07 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -192,6 +192,14 @@ Also, here is one user's
 <a href="http://mla.libertine.org/tmda-users/200108/msg00002.html" TARGET="Resource Window">
 configuration details</a> 
 for a site-wide TMDA install using smtpd-auth, vpopmail and qmailadmin.
+
+<hr>
+<li><b>
+How do I setup TMDA with <a href="http://inter7.com/vpopmail/" TARGET="Resource Window">vpopmail</a>?
+</b>
+<br><br>
+See Lou Hevly's <a href="http://www.visca.com/tmda/tmda_vpop.html" TARGET="Resource Window">
+TMDA/vpopmail tutorial</a>
 
 <hr>
 <li><b>
