@@ -9,6 +9,10 @@ Project Management Site at Sourceforge</a><br><br>
 <li><a href="http://www.apress.com/catalog/book/1893115402/" TARGET="Resource Window">
 The qmail Handbook</a> contains a section describing TMDA<br><br>
 
+<li>Lou Hevly has written a 
+<a href="http://www.visca.com/tmda/tmda_vpop.html" TARGET="Resource Window">
+tutorial for installing TMDA with vpopmail</a><br><br>
+
 <li><a href="http://www.visca.com/tmda/tmda_confirm.html" TARGET="Resource Window">tmda_confirm.pl</a> 
 is a Perl script that checks all the CONFIRM messages in the TMDA log
 file entries for the last $hours hours and pulls out the corresponding
