@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Fri Nov 16 15:29:14 2001 -->
+<!-- Tue Nov 27 16:34:05 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -133,6 +133,10 @@ Project Management Site at Sourceforge</a><br><br>
 
 <li><a href="http://www.apress.com/catalog/book/1893115402/" TARGET="Resource Window">
 The qmail Handbook</a> contains a section describing TMDA<br><br>
+
+<li>Lou Hevly has written a 
+<a href="http://www.visca.com/tmda/tmda_vpop.html" TARGET="Resource Window">
+tutorial for installing TMDA with vpopmail</a><br><br>
 
 <li><a href="http://www.visca.com/tmda/tmda_confirm.html" TARGET="Resource Window">tmda_confirm.pl</a> 
 is a Perl script that checks all the CONFIRM messages in the TMDA log
