@@ -1,3 +1,7 @@
+2001-11-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* THANKS (Contributions): Add Lou Hevly.
+
 2001-11-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* README: Removed TODO.
